<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/blue" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:id="@id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/startdate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/startdate" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/to" />
            <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/enddate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enddate" />
        </TableRow>
        <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TableRow android:id="@id/tableRow12" android:layout_width="wrap_content" android:layout_height="100.0dip">
                <Spinner android:id="@id/spinner1" android:layout_width="150.0dip" android:layout_height="50.0dip" />
                <Button android:id="@id/button1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/view" style="?android:attr/buttonStyleSmall" />
            </TableRow>
        </TableLayout>
        <TableRow android:id="@id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableLayout>
    <TableRow android:id="@id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@id/TextView1" android:layout_width="175.0dip" android:layout_height="wrap_content" android:text="Total Sale" />
        <TextView android:id="@id/tsale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
    </TableRow>
    <TableRow android:id="@id/tableRow4" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:id="@id/textView3" android:layout_width="175.0dip" android:layout_height="wrap_content" android:text="Sale amount" />
        <TextView android:id="@id/tamount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
    </TableRow>
    <TableRow android:id="@id/tableRow5" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView2" android:layout_width="175.0dip" android:layout_height="wrap_content" android:text="Amount to Pay" />
        <TextView android:id="@id/tpay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
    </TableRow>
    <TableRow android:id="@id/tableRow6" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView5" android:layout_width="175.0dip" android:layout_height="wrap_content" android:text="No Of winning" />
        <TextView android:id="@id/twin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
    </TableRow>
    <TableRow android:id="@id/tableRow7" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView7" android:layout_width="175.0dip" android:layout_height="wrap_content" android:text="Winning amount" />
        <TextView android:id="@id/twinamt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
    </TableRow>
    <TableRow android:id="@id/tableRow8" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView9" android:layout_width="175.0dip" android:layout_height="wrap_content" android:text="DC Amont" />
        <TextView android:id="@id/tdcamount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
    </TableRow>
    <TableRow android:id="@id/tableRow9" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView11" android:layout_width="175.0dip" android:layout_height="wrap_content" android:text="Stock Amount" />
        <TextView android:id="@id/tstkamount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
    </TableRow>
    <TableRow android:id="@id/tableRow10" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView13" android:layout_width="175.0dip" android:layout_height="wrap_content" android:text="Grand Total" />
        <TextView android:id="@id/tgtotal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
    </TableRow>
    <TableRow android:id="@id/tableRow11" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView15" android:layout_width="175.0dip" android:layout_height="wrap_content" android:text="Balance" />
        <TextView android:id="@id/tbalance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="TextView" />
    </TableRow>
</LinearLayout>
