<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="right" android:orientation="vertical" android:id="@id/lay" android:background="@color/blue" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TableRow android:layout_gravity="center" android:id="@id/tableRow18" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:id="@id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TableRow android:id="@id/tableRow2" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Customer" />
            <AutoCompleteTextView android:textSize="16.0sp" android:textColor="@android:color/black" android:id="@id/autoCompleteTextView1" android:layout_width="175.0dip" android:layout_height="38.0dip" android:ems="10" />
        </TableRow>
        <TableRow android:id="@id/tableRow3" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="fill_parent">
                <Spinner android:textSize="8.0sp" android:id="@id/prod" android:layout_width="160.0dip" android:layout_height="43.0dip" android:layout_weight="1.0" />
                <ToggleButton android:id="@id/toggleButton1" android:layout_width="30.0dip" android:layout_height="fill_parent" android:textOn="Series" android:textOff="Number" android:layout_weight="1.0" />
            </LinearLayout>
            <TableRow android:id="@id/tableRow6" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TableRow android:id="@id/tableRow7" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TableRow android:id="@id/tableRow8" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TableRow android:id="@id/tableRow11" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </TableLayout>
        <TableRow android:id="@id/tableRow4" android:layout_width="wrap_content" android:layout_height="40.0dip" />
        <TableRow android:id="@id/tableRow5" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <RadioGroup android:orientation="horizontal" android:id="@id/radioGroup1" android:layout_width="500.0dip" android:layout_height="40.0dip">
            <RadioButton android:id="@id/R1" android:layout_width="wrap_content" android:layout_height="33.0dip" android:text="1  " />
            <RadioButton android:id="@id/R2" android:layout_width="wrap_content" android:layout_height="33.0dip" android:text="2  " />
            <RadioButton android:id="@id/R3" android:layout_width="wrap_content" android:layout_height="33.0dip" android:checked="true" android:text="3  " />
            <Spinner android:textSize="6.0sp" android:textColor="@android:color/black" android:id="@id/abc" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0" />
        </RadioGroup>
        <TableRow android:id="@id/tableRow17" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <TableLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TableRow android:id="@id/tableRow10" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <EditText android:id="@id/pno" android:layout_width="60.0dip" android:layout_height="wrap_content" android:hint="@string/no" android:ems="10" android:singleLine="true" android:inputType="number">
                        <requestFocus />
                    </EditText>
                    <EditText android:id="@id/tend" android:layout_width="60.0dip" android:layout_height="wrap_content" android:hint="@string/end" android:ems="10" android:inputType="number" />
                    <EditText android:id="@id/qty" android:layout_width="60.0dip" android:layout_height="wrap_content" android:hint="@string/qty" android:ems="10" android:singleLine="true" android:inputType="number" />
                    <EditText android:id="@id/price" android:layout_width="60.0dip" android:layout_height="wrap_content" android:ems="10" android:singleLine="true" android:inputType="numberDecimal" />
                    <Button android:id="@id/add" android:layout_width="40.0dip" android:layout_height="fill_parent" android:text="Add" style="?android:attr/buttonStyleSmall" />
                    <TextView android:id="@id/tprice" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
        <TableLayout android:id="@id/disptable" android:layout_width="wrap_content" android:layout_height="170.0dip">
            <ListView android:id="@id/testsale" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        </TableLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TableRow android:gravity="right" android:id="@id/tableRow9" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:id="@id/save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  Send   " style="?android:attr/buttonStyleSmall" />
            </TableRow>
        </LinearLayout>
    </TableLayout>
</LinearLayout>
